# RustSample

example/: settings.gradle.kts
example/app/: build.gradle.kts
example/app/src/main/java/dev/matrix/rust/: MainActivity.kt
example/app/src/main/res/layout/: activity_main.xml
example/app/src/rust_library/: Cargo.toml  lsd.txt
example/app/src/rust_library/.cargo/: config  config.toml
example/app/src/rust_library/src/: lib.rs  main.rs
src/main/kotlin/dev/matrix/agp/rust/: RustBuildTask.kt
