[package]
name = "rust_library"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
#ndk = { version = "0.9.0", features = ["all"] }
#ndk-sys = "0.6.0"

[dependencies]
jni = "0.21.1"
log = { version = "0.4", features = ["std"] }
android_logger = "0.14.1"


[package.metadata.android.sdk]
min_sdk_version = 22
target_sdk_version = 29
